# auto_up_product_funpay

./: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
adapters/: adapter_base.py
