[project]
name = "auto-up-product-funpay"
version = "0.1.0"
description = ""
authors = [
    {name = "\\"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium-base (>=4.39.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
